[tool.poetry]
name = "transport-v2"
version = "0.1.0"
description = ""
authors = ["Jarrad Whitaker <akdor1154 at gmail>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.13.25"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
